--- a/EBW/electron_bernstein_waves.tex
+++ b/EBW/electron_bernstein_waves.tex
@@ -5,15 +5,15 @@
 \usepackage{amsmath}
 
 % Bibliography
-\addbibresource{ebw.bib}
-
-% Command definitions
-\include{definitions.tex}
+\addbibresource{../ebw.bib}
 
 % Change equation numbering to use subsections
 \numberwithin{equation}{subsection}
 
 \begin{document}
+	% Command definitions
+	\include{definitions.tex}
+	
 	\include{high_frequency_waves.tex}
 	
 	\include{hot_plasma_dielectric_tensor.tex}
